[IMP] socket.io to sync data

--- a/client/index.html
+++ b/client/index.html
@@ -12,8 +12,8 @@
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- Plotly.js support -->
-      <script src="assets/plotly/d3.v3.min.js"></script>
-      <script src="assets/plotly/plotly.min.js"></script>
+      <script src="bower_components/plotly/d3.v3.min.js"></script>
+      <script src="bower_components/plotly/plotly.min.js"></script>
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
       <!-- endbower -->
@@ -58,6 +58,7 @@
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
+      <script src="bower_components/async/lib/async.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
     <!-- endbuild -->
