--- a/client/index.html
+++ b/client/index.html
@@ -70,6 +70,8 @@
           <!-- injector:js -->
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/testsync/testsync.controller.js"></script>
+          <script src="app/testsync/testsync.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/socket/socket.service.js"></script>
